src/tests/fixtures/preprocessor/errors/error7.cpp
#include <src/tests/fixtures/preprocessor/random_define.cpp> break_here

int foo Assert(132151)

